# interpreter-rs

./: .gitignore  Cargo.toml  README.md  fib.py  list.csv  main.rs  rustfmt.toml  test.dmd  test.py  test.rs
bytecode/src/: lib.rs
compiler/src/: compiler.rs  lib.rs  structs.rs  tests.rs
compiler/tests/expect_test_results/: bang_bool_false.txt  bool_false.txt  bool_true.txt  equal_to.txt  greater_than.txt  if_true_five.txt  int_add.txt  int_mul.txt  int_sub.txt  less_than.txt  pre_neg.txt  pre_neg_sub.txt  prefix_expr.txt  single_int.txt
crates/bytecode/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: .lib.rs.rustfmt  lib.rs  object.rs  structs.rs  symbol_table.rs  tests.rs
crates/compiler/tests/expect_test_results/: bang_bool_false.txt  binary_divide.txt  binary_multiply.txt  equal_to.txt  greater_than.txt  int_add.txt  int_mul.txt  int_sub.txt  less_than.txt  pre_neg.txt  pre_neg_sub.txt  single_int.txt
crates/evaluator/: Cargo.toml
crates/evaluator/src/: error.rs  lib.rs  object.rs  structs.rs  tests.rs
crates/evaluator/src/object/: mod.rs
crates/evaluator/tests/expect_test_results/: index_out_of_bounds_string.txt
crates/evaluator/tests/expect_test_results/parser/: if_elseif_else_again.txt  let_ident_string.txt  new_scope_bad_semicolon.txt  operator_precedence.txt  single_let.txt
crates/lexer/: Cargo.toml
crates/lexer/benches/: large_file.dmd  lex_large_file.rs
crates/lexer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/lexer/tests/expect_test_results/: comprehensive_expect_test.txt
crates/object/: Cargo.toml
crates/object/src/: .lib.rs.rustfmt  env.rs  lib.rs  literal_types_macro.rs
crates/parser/src/: error.rs  expr.rs  lib.rs  statement.rs  structs.rs  tests.rs
crates/repl/: Cargo.toml
crates/repl/src/: lib.rs  main.rs
crates/repl2/: Cargo.toml
crates/repl2/src/: main.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs  tests.rs
crates/vm/tests/expect_test_results/: array_index_op.txt  array_literal.txt  bang_false.txt  binary_divide.txt  binary_multiply.txt  if_false_3.txt  if_false_5_else_3.txt  if_false_5_else_3_final.txt  if_false_no_alternative_semi.txt  if_true_5_else_3.txt  if_true_5_else_3_semi.txt  if_true_five.txt  if_true_five_else_3.txt  let_x_5_x.txt  prefix_expr.txt  single_bool.txt  single_int.txt  string_add.txt  string_concat.txt  string_index_op.txt  string_literal.txt
evaluator/: Cargo.toml
evaluator/src/: lib.rs  structs.rs  tests.rs
evaluator/src/object/: literal_types_macro.rs  mod.rs
evaluator/tests/expect_test_results/: index_out_of_bounds_string.txt
interpreter/: Cargo.toml
interpreter/src/: evaluator.rs  lexer.rs  lib.rs  object.rs  parser.rs  repl.rs
interpreter/src/evaluator/: mod.rs  tests.rs
interpreter/src/lexer/: mod.rs  test.rs  tests.rs
interpreter/src/object/: literal_types_macro.rs  mod.rs
interpreter/src/parser/: mod.rs  structs.rs  test.rs  tests.rs
interpreter/tests/expect_test_results/lexer/: bad_character.txt  comprehensive_expect_test.txt
interpreter/tests/expect_test_results/parser/: assign_statement.txt  assign_statement_no_semicolon.txt  basic_return.txt  bit_and.txt  bit_or.txt  bool_and.txt  bool_or.txt  call_expression.txt  call_expression_bad_semicolon.txt  call_expression_no_args.txt  call_expression_with_expression_args.txt  comprehensive.txt  double_let.txt  func_no_body.txt  function_literal.txt  identifier_expression.txt  if_elseif_else.txt  if_with_bool_expr.txt  let_statement_no_semicolon.txt  nested_if.txt  new_scope.txt  new_scope_bad_semicolon.txt  operator_precedence_with_grouped_expressions.txt  return_no_expr_no_semicolon.txt  return_no_expression.txt  return_no_semicolon.txt  simple_prefix_op_expression_statement.txt  single_int_expression.txt  single_let.txt  single_let_with_add.txt  single_let_with_bool.txt  single_operator_precedence_expression_statement.txt
lexer/: Cargo.toml
lexer/src/: lib.rs  tests.rs
lexer/tests/expect_test_results/: bad_character.txt  comprehensive_expect_test.txt
object/: Cargo.toml
object/src/: lib.rs
object/tests/: print.rs
parser/: Cargo.toml
parser/src/: lib.rs  structs.rs  tests.rs
parser/tests/expect_test_results/: assign_statement.txt  assign_statement_no_semicolon.txt  basic_return.txt  bit_and.txt  bit_or.txt  bool_and.txt  bool_or.txt  call_expression.txt  call_expression_bad_semicolon.txt  call_expression_no_args.txt  call_expression_with_expression_args.txt  comprehensive.txt  double_let.txt  empty_array.txt  func_no_body.txt  function_literal.txt  identifier_expression.txt  if_elseif_else.txt  if_elseif_else_again.txt  if_with_bool_expr.txt  int_array.txt  int_array_index.txt  int_method_call.txt  let_ident_string.txt  let_statement_no_semicolon.txt  multiple_non_terminated_exprs.txt  nested_if.txt  nested_scope.txt  new_scope.txt  new_scope_bad_semicolon.txt  operator_precedence.txt  operator_precedence_with_grouped_expressions.txt  return_no_expr_no_semicolon.txt  return_no_expression.txt  return_no_semicolon.txt  simple_prefix_op_expression_statement.txt  single_int_expression.txt  single_let.txt  single_let_with_add.txt  single_let_with_bool.txt  (+3 more)
repl/: Cargo.toml
repl/src/: lib.rs  main.rs
repl2/: Cargo.toml
repl2/src/: main.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/lexer/: test.rs
src/parser/: structs.rs  test.rs
tests/expect_test_results/lexer/: comprehensive_expect_test.txt
tests/expect_test_results/parser/: assign_statement.txt  assign_statement_no_semicolon.txt  basic_return.txt  call_expression.txt  call_expression_bad_semicolon.txt  call_expression_no_args.txt  double_let.txt  func_no_body.txt  function_literal.txt  identifier_expression.txt  if_elseif_else.txt  new_scope.txt  (+11 more)
vm/: Cargo.toml
vm/src/: lib.rs  tests.rs
vm/tests/expect_test_results/: binary_multiply.txt  if_5_five_else_3_final.txt  if_false_five_else_3_final.txt  if_false_no_alternative_semi.txt  if_true_five.txt  prefix_expr.txt  single_int.txt  string_add.txt
vmachine/: Cargo.toml
vmachine/src/: bytecode.rs  lib.rs  virtual_machine.rs
(+31 files in other folders)
