[package]
name = "interpreter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
assert_matches = "1.5.0"
expect-test = "1.4.0"
