[workspace]
members = ["evaluator", "lexer", "parser", "repl", "compiler", "vm", "bytecode", "repl2"]

[workspace.dependencies]
evaluator = {path = "./evaluator/"}
lexer = {path = "./lexer/"}
parser = {path = "./parser/"}
repl = {path = "./repl/"}
compiler = {path = "./compiler/"}
vm = {path = "./vm/"}
bytecode = {path = "./bytecode/"}
repl2 = {path = "./repl2/"}

error-stack = {path = "/Users/jaredmoulton/Developer/hash/main/packages/libs/error-stack/"}
owo-colors = {version = "3.5.0", features = ["supports-colors"]}
clap = {version = "3.2.22", features = ["derive"]}
expect-test = "1.4.0"
