[workspace]
members = ["crates/*"]

[workspace.dependencies]
evaluator = {path = "./crates/evaluator/"}
lexer = {path = "./crates/lexer/"}
parser = {path = "./crates/parser/"}
repl = {path = "./crates/repl/"}
compiler = {path = "./crates/compiler/"}
vm = {path = "./crates/vm/"}
bytecode = {path = "./crates/bytecode/"}
repl2 = {path = "./crates/repl2/"}
object = {path = "./crates/object/"}


error-stack = {path = "/Users/jaredmoulton/Developer/hash/main/packages/libs/error-stack/"}
owo-colors = {version = "3.5.0", features = ["supports-colors"]}
clap = {version = "3.2.22", features = ["derive"]}
expect-test = "1.4.0"
