[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.1.1"
enum_dispatch = "0.3.8"

[dev-dependencies]
pretty_assertions = "1.3.0"
assert_matches = "1.5.0"
expect-test = "1.4.0"
regex = "1.6.0"
