[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { workspace = true }

error-stack = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
