[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evaluator = {path = "../evaluator/"}
lexer = {path = "../lexer/"}
parser = {path = "../parser/"}
clap = {version = "3.2.22", features = ["derive"]}
owo-colors = "3.5.0"
