[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = {path = "../lexer/"}
parser = {path = "../parser/"}
evaluator = {path = "../evaluator/"}

clap = {version = "3.2.22", features = ["derive"]}
owo-colors = { workspace = true }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5"
