[package]
name = "repl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { workspace = true }
parser = { workspace = true }
compiler = { workspace = true }
bytecode = { workspace = true }
vm = { workspace = true }

clap = {workspace = true}
error-stack = { workspace = true }

# owo-colors = { workspace = true }
