[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evaluator = { workspace = true }
bytecode = { workspace = true }

error-stack = {workspace = true}

[dev-dependencies]
compiler = { workspace = true }
lexer = { workspace = true }
parser = { workspace = true }
expect-test = {workspace = true}

