[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {workspace = true}
error-stack = {workspace = true}

parser = { workspace = true }
lexer = { workspace = true }
evaluator = { workspace = true }
bytecode = { workspace = true }
object.workspace = true

[dev-dependencies]
expect-test = { workspace = true }
