[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { workspace = true }
lexer = { workspace = true }
object.workspace = true

error-stack = { workspace = true }
owo-colors = { workspace = true }
enum_dispatch = "0.3.8"

[dev-dependencies]
expect-test = { workspace = true }
