[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
expect-test = { workspace = true }

[target.'cfg(bench)'.dev-dependencies]
 # to activate, pass RUSTFLAGS="--cfg bench" until cargo does this automatically
 criterion = "0.4.0"

[[bench]]
name = "lex_large_file"
harness = false
