[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { workspace = true }
parser = { workspace = true }
evaluator = { workspace = true }

clap = {workspace = true}
owo-colors = { workspace = true }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5"
